test/regression/idl/compiler/fail/Pragma_Fail2.idl
// Pragma Testing

#pragma prefix "jacorb.org.Tests"

interface GlobalInterface {};
interface GlobalInterfaceNoVersion {};

module C
{
   module B
   {
      interface AAA {};
      interface BB {};

#pragma ID BB "IDL:COW/B/BB:1.1"
#pragma version BB 1.1
#pragma prefix Foo
#pragma version AA 1.2

      interface A {};

#pragma version A 1.2
// Error checking
#pragma version A 1.2.1
   };
};
